# lvgl-rs-wasm

./: .gitattributes  .gitignore  Cargo.toml  Makefile  README.md  Web.toml
.cargo/: config
docs/: index.html  lvgl_example.js  lvgl_example.wasm  lvgl_example.wasm.map
src/: main.rs
